--- a/src/main/resources/assets/morethanapickaxe/lang/ru_ru.lang
+++ b/src/main/resources/assets/morethanapickaxe/lang/ru_ru.lang
@@ -50,6 +50,10 @@ item.purple_diamond_adze.name=Фиолетовый алмаз Адзе
 item.yellow_diamond_adze.name=Жёлтый алмаз Адзе
 item.green_diamond_adze.name=Зелёный алмаз Адзе
 
+item.gobber_adze.name=Гоббер Адзе
+item.nether_adze.name=Адский Адзе
+item.end_adze.name=Края Адзе
+
 item.hammertime.itemdenseadzewood.name=Деревянная Плотная Aдзе
 item.hammertime.itemdenseadzestone.name=Каменная Плотная Aдзе
 item.hammertime.itemdenseadzeiron.name=Железные Плотная Aдзе
