--- a/src/main/resources/assets/morethanapickaxe/lang/zh_tw.json
+++ b/src/main/resources/assets/morethanapickaxe/lang/zh_tw.json
@@ -27,6 +27,10 @@
   "item.morethanapickaxe.topaz_adze": "\u9ec3\u7389\u963f\u6fa4",
   "item.morethanapickaxe.quartz_adze": "\u77f3\u82f1\u963f\u6fa4",
   
+  "item.morethanapickaxe.gobber_adze": "\u6208\u4f2f\u963f\u6fa4",
+  "item.morethanapickaxe.nether_adze": "\u5730\u7344\u963f\u6fa4",
+  "item.morethanapickaxe.end_adze": "\u672b\u5f71\u963f\u6fa4",
+  
   "item.hammertime.itemdenseadzewood": "\u81f4\u5bc6\u6728\u963f\u6fa4",
   "item.hammertime.itemdenseadzestone": "\u81f4\u5bc6\u77f3\u963f\u6fa4",
   "item.hammertime.itemdenseadzeiron": "\u81f4\u5bc6\u9435\u963f\u6fa4",
