--- a/src/main/resources/assets/morethanapickaxe/lang/en_us.json
+++ b/src/main/resources/assets/morethanapickaxe/lang/en_us.json
@@ -27,6 +27,10 @@
   "item.morethanapickaxe.topaz_adze": "Topaz Adze",
   "item.morethanapickaxe.quartz_adze": "Quartz Adze",
   
+  "item.morethanapickaxe.gobber_adze": "Gobber Adze",
+  "item.morethanapickaxe.nether_adze": "Nether Adze",
+  "item.morethanapickaxe.end_adze": "End Adze",
+  
   "item.hammertime.itemdenseadzewood": "Wooden Dense Adze",
   "item.hammertime.itemdenseadzestone": "Stone Dense Adze",
   "item.hammertime.itemdenseadzeiron": "Iron Dense Adze",
