--- a/src/main/resources/assets/morethanapickaxe/lang/es_es.json
+++ b/src/main/resources/assets/morethanapickaxe/lang/es_es.json
@@ -27,6 +27,10 @@
   "item.morethanapickaxe.topaz_adze": "Adze de Topacio",
   "item.morethanapickaxe.quartz_adze": "Adze de Cuarzo",
   
+  "item.morethanapickaxe.gobber_adze": "Adze de Gobber",
+  "item.morethanapickaxe.nether_adze": "Adze de Infernal",
+  "item.morethanapickaxe.end_adze": "Adze de Ender",
+  
   "item.hammertime.itemdenseadzewood": "Adze Densa de Madera",
   "item.hammertime.itemdenseadzestone": "Adze Densa de Piedra",
   "item.hammertime.itemdenseadzeiron": "Adze Densa de Hierro",
