--- a/src/main/resources/assets/morethanapickaxe/lang/ja_jp.json
+++ b/src/main/resources/assets/morethanapickaxe/lang/ja_jp.json
@@ -27,6 +27,10 @@
   "item.morethanapickaxe.topaz_adze": "\u30c8\u30d1\u30fc\u30ba\u306e\u30a2\u30ba",
   "item.morethanapickaxe.quartz_adze": "\u30af\u30a9\u30fc\u30c4\u306e\u30a2\u30ba",
   
+  "item.morethanapickaxe.gobber_adze": "\u30b4\u30d0\u30fc\u306e\u30a2\u30ba",
+  "item.morethanapickaxe.nether_adze": "\u30cd\u30b6\u30fc\u306e\u30a2\u30ba",
+  "item.morethanapickaxe.end_adze": "\u30a8\u30f3\u30c0\u30fc\u306e\u30a2\u30ba",
+  
   "item.hammertime.itemdenseadzewood": "\u6728\u306e\u30a2\u30ba\uff08\u9ad8\u5bc6\u5316\uff09",
   "item.hammertime.itemdenseadzestone": "\u77f3\u306e\u30a2\u30ba\uff08\u9ad8\u5bc6\u5316\uff09",
   "item.hammertime.itemdenseadzeiron": "\u9244\u306e\u30a2\u30ba\uff08\u9ad8\u5bc6\u5316\uff09",
