--- a/src/main/resources/assets/morethanapickaxe/lang/ru_ru.json
+++ b/src/main/resources/assets/morethanapickaxe/lang/ru_ru.json
@@ -27,6 +27,10 @@
   "item.morethanapickaxe.topaz_adze": "\u0422\u043e\u043f\u0430\u0437 \u0410\u0434\u0437\u0435",
   "item.morethanapickaxe.quartz_adze": "\u041a\u0432\u0430\u0440\u0446 \u0410\u0434\u0437\u0435",
   
+  "item.morethanapickaxe.gobber_adze": "\u0413\u043e\u0431\u0431\u0435\u0440 \u0410\u0434\u0437\u0435",
+  "item.morethanapickaxe.nether_adze": "\u0410\u0434\u0441\u043a\u0438\u0439 \u0410\u0434\u0437\u0435",
+  "item.morethanapickaxe.end_adze": "\u041a\u0440\u0430\u044f \u0410\u0434\u0437\u0435",
+  
   "item.hammertime.itemdenseadzewood": "\u0414\u0435\u0440\u0435\u0432\u044f\u043d\u043d\u0430\u044f \u041f\u043b\u043e\u0442\u043d\u0430\u044f \u0041\u0434\u0437\u0435",
   "item.hammertime.itemdenseadzestone": "\u041a\u0430\u043c\u0435\u043d\u043d\u0430\u044f \u041f\u043b\u043e\u0442\u043d\u0430\u044f \u0041\u0434\u0437\u0435",
   "item.hammertime.itemdenseadzeiron": "\u0416\u0435\u043b\u0435\u0437\u043d\u044b\u0435 \u041f\u043b\u043e\u0442\u043d\u0430\u044f \u0041\u0434\u0437\u0435",
