--- a/src/main/resources/assets/morethanapickaxe/lang/en_us.json
+++ b/src/main/resources/assets/morethanapickaxe/lang/en_us.json
@@ -41,6 +41,10 @@
   "item.morethanapickaxe.vibranium_adze": "Vibranium Adze",
   "item.morethanapickaxe.nether_brick_adze": "Nether Brick Adze",
   
+  "item.morethanapickaxe.gobber_adze": "Gobber Adze",
+  "item.morethanapickaxe.nether_adze": "Nether Adze",
+  "item.morethanapickaxe.end_adze": "End Adze",
+  
   "advancements.morethanapickaxe.install": "More Than A Pickaxe Installation",
   "advancements.morethanapickaxe.install.desc": "Download and Install More Than A Pickaxe",
   "advancements.morethanapickaxe.install.display1": "coolsim thanks you for downloading More Than A Pickaxe!",
