--- a/src/main/resources/assets/morethanapickaxe/lang/ru_ru.json
+++ b/src/main/resources/assets/morethanapickaxe/lang/ru_ru.json
@@ -41,6 +41,10 @@
   "item.morethanapickaxe.vibranium_adze": "\u0412\u0438\u0431\u0440\u0430\u043d\u0438\u0443\u043c \u0410\u0434\u0437\u0435",
   "item.morethanapickaxe.nether_brick_adze": "\u041d\u0435\u0437\u0435\u0440\u0438\u0442\u043e\u0432\u044b\u0439 \u043a\u0438\u0440\u043f\u0438\u0447 \u0410\u0434\u0437\u0435",
   
+  "item.morethanapickaxe.gobber_adze": "\u0413\u043e\u0431\u0431\u0435\u0440 \u0410\u0434\u0437\u0435",
+  "item.morethanapickaxe.nether_adze": "\u0410\u0434\u0441\u043a\u0438\u0439 \u0410\u0434\u0437\u0435",
+  "item.morethanapickaxe.end_adze": "\u041a\u0440\u0430\u044f \u0410\u0434\u0437\u0435",
+  
   "advancements.morethanapickaxe.install": "\u0411\u043e\u043b\u044c\u0448\u0435 \u0447\u0435\u043c \u043a\u0438\u0440\u043a\u0430 \u0423\u0441\u0442\u0430\u043d\u043e\u0432\u043a\u0430",
   "advancements.morethanapickaxe.install.desc": "\u0417\u0430\u0433\u0440\u0443\u0437\u0438\u0442\u044c \u0438 \u0443\u0441\u0442\u0430\u043d\u043e\u0432\u0438\u0442\u044c \u0411\u043e\u043b\u044c\u0448\u0435 \u0447\u0435\u043c \u043a\u0438\u0440\u043a\u0430",
   "advancements.morethanapickaxe.install.display1": "coolsim \u0441\u043f\u0430\u0441\u0438\u0431\u043e \u0437\u0430 \u0437\u0430\u0433\u0440\u0443\u0437\u043a\u0443 \u0411\u043e\u043b\u044c\u0448\u0435 \u0447\u0435\u043c \u043a\u0438\u0440\u043a\u0430!",
