--- a/src/main/resources/assets/morethanapickaxe/lang/zh_tw.json
+++ b/src/main/resources/assets/morethanapickaxe/lang/zh_tw.json
@@ -43,6 +43,10 @@
   "item.morethanapickaxe.vibranium_adze": "\u632f\u91d1\u963f\u6fa4",
   "item.morethanapickaxe.nether_brick_adze": "\u5730\u7344\u78da\u584a\u963f\u6fa4",
   
+  "item.morethanapickaxe.gobber_adze": "\u6208\u4f2f\u963f\u6fa4",
+  "item.morethanapickaxe.nether_adze": "\u5730\u7344\u963f\u6fa4",
+  "item.morethanapickaxe.end_adze": "\u672b\u5f71\u963f\u6fa4",
+  
   "advancements.morethanapickaxe.install": "\u4e0d\u53ea\u662f\u93ac\u5b89\u88dd",
   "advancements.morethanapickaxe.install.desc": "\u4e0b\u8f09\u4e26\u5b89\u88dd\u4e0d\u53ea\u662f\u93ac",
   "advancements.morethanapickaxe.install.display1": "coolsim\u8b1d\u8b1d\u60a8\u7684\u4e0b\u8f09\u4e0d\u53ea\u662f\u93ac\uff01",
