Fixed Vanilla Enhanced/Enriched Support - Fixed Recipe Conditions

--- a/src/main/resources/assets/morethanapickaxe/lang/en_us.json
+++ b/src/main/resources/assets/morethanapickaxe/lang/en_us.json
@@ -27,6 +27,8 @@
   "item.morethanapickaxe.topaz_adze": "Topaz Adze",
   "item.morethanapickaxe.quartz_adze": "Quartz Adze",
   
+  "item.morethanapickaxe.tanzanite_adze": "Tanzanite Adze",
+  
   "item.morethanapickaxe.alexandrite_adze": "Alexandrite Adze",
   "item.morethanapickaxe.citrine_adze": "Citrine Adze",
   "item.morethanapickaxe.tourmaline_adze": "Tourmaline Adze",
