--- a/src/main/resources/assets/morethanapickaxe/lang/es_es.json
+++ b/src/main/resources/assets/morethanapickaxe/lang/es_es.json
@@ -27,6 +27,8 @@
   "item.morethanapickaxe.topaz_adze": "Adze de Topacio",
   "item.morethanapickaxe.quartz_adze": "Adze de Cuarzo",
   
+  "item.morethanapickaxe.tanzanite_adze": "Adze de Tanzanita",
+  
   "item.morethanapickaxe.alexandrite_adze": "Adze de Alejandrita",
   "item.morethanapickaxe.citrine_adze": "Adze de Citrino",
   "item.morethanapickaxe.tourmaline_adze": "Adze de Turmalina",
