--- a/src/main/resources/assets/morethanapickaxe/lang/ja_jp.json
+++ b/src/main/resources/assets/morethanapickaxe/lang/ja_jp.json
@@ -27,6 +27,8 @@
   "item.morethanapickaxe.topaz_adze": "\u30c8\u30d1\u30fc\u30ba\u306e\u30a2\u30ba",
   "item.morethanapickaxe.quartz_adze": "\u30af\u30a9\u30fc\u30c4\u306e\u30a2\u30ba",
   
+  "item.morethanapickaxe.tanzanite_adze": "\u30bf\u30f3\u30b6\u30ca\u30a4\u30c8\u306e\u30a2\u30ba",
+  
   "item.morethanapickaxe.alexandrite_adze": "\u30a2\u30ec\u30ad\u30b5\u30f3\u30c9\u30e9\u30a4\u30c8\u306e\u30a2\u30ba",
   "item.morethanapickaxe.citrine_adze": "\u30b7\u30c8\u30ea\u30f3\u306e\u30a2\u30ba",
   "item.morethanapickaxe.tourmaline_adze": "\u30c8\u30eb\u30de\u30ea\u30f3\u306e\u30a2\u30ba",
