--- a/src/main/resources/assets/morethanapickaxe/lang/ru_ru.json
+++ b/src/main/resources/assets/morethanapickaxe/lang/ru_ru.json
@@ -27,6 +27,8 @@
   "item.morethanapickaxe.topaz_adze": "\u0422\u043e\u043f\u0430\u0437 \u0410\u0434\u0437\u0435",
   "item.morethanapickaxe.quartz_adze": "\u041a\u0432\u0430\u0440\u0446 \u0410\u0434\u0437\u0435",
   
+  "item.morethanapickaxe.tanzanite_adze": "\u0422\u0430\u043d\u0437\u0430\u043d\u0438\u0442 \u0410\u0434\u0437\u0435",
+  
   "item.morethanapickaxe.alexandrite_adze": "\u0410\u043b\u0435\u043a\u0441\u0430\u043d\u0434\u0440\u0438\u0442 \u0410\u0434\u0437\u0435",
   "item.morethanapickaxe.citrine_adze": "\u0426\u0438\u0442\u0440\u0438\u043d \u0410\u0434\u0437\u0435",
   "item.morethanapickaxe.tourmaline_adze": "\u0422\u0443\u0440\u043c\u0430\u043b\u0438\u043d \u0410\u0434\u0437\u0435",
