--- a/src/main/resources/assets/morethanapickaxe/lang/zh_cn.json
+++ b/src/main/resources/assets/morethanapickaxe/lang/zh_cn.json
@@ -27,6 +27,8 @@
   "item.morethanapickaxe.topaz_adze": "\u9ec4\u7389\u963f\u6cfd",
   "item.morethanapickaxe.quartz_adze": "\u77f3\u82f1\u963f\u6cfd",
   
+  "item.morethanapickaxe.tanzanite_adze": "\u5766\u6851\u77f3\u963f\u6cfd",
+  
   "item.morethanapickaxe.alexandrite_adze": "\u4e9a\u5386\u5c71\u5927\u77f3\u963f\u6cfd",
   "item.morethanapickaxe.citrine_adze": "\u8336\u6676\u963f\u6cfd",
   "item.morethanapickaxe.tourmaline_adze": "\u7535\u6c14\u77f3\u963f\u6cfd",
