--- a/src/main/resources/assets/morethanapickaxe/lang/zh_tw.json
+++ b/src/main/resources/assets/morethanapickaxe/lang/zh_tw.json
@@ -27,6 +27,8 @@
   "item.morethanapickaxe.topaz_adze": "\u9ec3\u7389\u963f\u6fa4",
   "item.morethanapickaxe.quartz_adze": "\u77f3\u82f1\u963f\u6fa4",
   
+  "item.morethanapickaxe.tanzanite_adze": "\u5766\u6851\u77f3\u963f\u6fa4",
+  
   "item.morethanapickaxe.alexandrite_adze": "\u4e9e\u66c6\u5c71\u5927\u77f3\u963f\u6fa4",
   "item.morethanapickaxe.citrine_adze": "\u8336\u6676\u963f\u6fa4",
   "item.morethanapickaxe.tourmaline_adze": "\u96fb\u6c23\u77f3\u963f\u6fa4",
