--- a/src/main/resources/assets/morethanapickaxe/lang/zh_cn.lang
+++ b/src/main/resources/assets/morethanapickaxe/lang/zh_cn.lang
@@ -54,6 +54,8 @@ item.gobber_adze.name=戈伯阿泽
 item.nether_adze.name=地狱阿泽
 item.end_adze.name=末影阿泽
 
+item.platinum_adze.name=铂阿泽
+
 item.hammertime.itemdenseadzewood.name=致密木阿泽
 item.hammertime.itemdenseadzestone.name=致密石阿泽
 item.hammertime.itemdenseadzeiron.name=致密铁阿泽
