--- a/src/main/resources/assets/morethanapickaxe/lang/zh_tw.lang
+++ b/src/main/resources/assets/morethanapickaxe/lang/zh_tw.lang
@@ -54,6 +54,8 @@ item.gobber_adze.name=戈伯阿澤
 item.nether_adze.name=地獄阿澤
 item.end_adze.name=末影阿澤
 
+item.platinum_adze.name=鉑阿澤
+
 item.hammertime.itemdenseadzewood.name=致密木阿澤
 item.hammertime.itemdenseadzestone.name=致密石阿澤
 item.hammertime.itemdenseadzeiron.name=致密鐵阿澤
