--- a/src/main/resources/assets/morethanapickaxe/lang/en_us.lang
+++ b/src/main/resources/assets/morethanapickaxe/lang/en_us.lang
@@ -54,6 +54,8 @@ item.gobber_adze.name=Gobber Adze
 item.nether_adze.name=Nether Adze
 item.end_adze.name=End Adze
 
+item.platinum_adze.name=Platinum Adze
+
 item.hammertime.itemdenseadzewood.name=Wooden Dense Adze
 item.hammertime.itemdenseadzestone.name=Stone Dense Adze
 item.hammertime.itemdenseadzeiron.name=Iron Dense Adze
