--- a/src/main/resources/assets/morethanapickaxe/lang/ja_jp.lang
+++ b/src/main/resources/assets/morethanapickaxe/lang/ja_jp.lang
@@ -54,6 +54,8 @@ item.gobber_adze.name=ゴバーのアズ
 item.nether_adze.name=ネザーのアズ
 item.end_adze.name=エンダーのアズ
 
+item.platinum_adze.name=白金のアズ
+
 item.hammertime.itemdenseadzewood.name=木のアズ（高密化）
 item.hammertime.itemdenseadzestone.name=石のアズ（高密化）
 item.hammertime.itemdenseadzeiron.name=鉄のアズ（高密化）
