--- a/src/main/resources/assets/morethanapickaxe/lang/es_es.json
+++ b/src/main/resources/assets/morethanapickaxe/lang/es_es.json
@@ -49,6 +49,10 @@
   "item.morethanapickaxe.nether_adze": "Adze de Infernal",
   "item.morethanapickaxe.end_adze": "Adze de Ender",
   
+  "item.morethanapickaxe.luxore_adze": "Adze de Luxore",
+  
+  "item.morethanapickaxe.peridot_adze": "Adze de Peridoto",
+  
   "advancements.morethanapickaxe.install": "M\u00e1s Que un Pico Instalaci\u00f3n",
   "advancements.morethanapickaxe.install.desc": "Descargue e Instale M\u00e1s Que un Pico",
   "advancements.morethanapickaxe.install.display1": "¡coolsim te agradece por descargar M\u00e1s Que un Pico!",
