--- a/src/main/resources/assets/morethanapickaxe/lang/ja_jp.json
+++ b/src/main/resources/assets/morethanapickaxe/lang/ja_jp.json
@@ -49,6 +49,10 @@
   "item.morethanapickaxe.nether_adze": "\u30cd\u30b6\u30fc\u306e\u30a2\u30ba",
   "item.morethanapickaxe.end_adze": "\u30a8\u30f3\u30c0\u30fc\u306e\u30a2\u30ba",
   
+  "item.morethanapickaxe.luxore_adze": "\u30eb\u30af\u30bd\u30fc\u30eb\u306e\u30a2\u30ba",
+  
+  "item.morethanapickaxe.peridot_adze": "\u30da\u30ea\u30c9\u30c3\u30c8\u306e\u30a2\u30ba",
+  
   "advancements.morethanapickaxe.install": "\u3064\u308b\u306f\u3057\u4ee5\u4e0a\u306e\u30a4\u30f3\u30b9\u30c8\u30fc\u30eb",
   "advancements.morethanapickaxe.install.desc": "\u3064\u308b\u306f\u3057\u4ee5\u4e0a\u3092\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9\u3057\u3066\u30a4\u30f3\u30b9\u30c8\u30fc\u30eb\u3059\u308b",
   "advancements.morethanapickaxe.install.display1": "coolsim\u306f\u3064\u308b\u306f\u3057\u4ee5\u4e0a\u3092\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9\u3057\u3066\u304f\u308c\u3066\u3042\u308a\u304c\u3068\u3046\uff01",
