Update for 1.19.4 - Added Efficiency on Glowstone

--- a/src/main/resources/assets/morethanapickaxe/lang/es_es.json
+++ b/src/main/resources/assets/morethanapickaxe/lang/es_es.json
@@ -1,5 +1,6 @@
 {
   "morethanapickaxe.name": "M\u00e1s Que un Pico",
+  "modmenu.descriptionTranslation.morethanapickaxe": "Este mod es un complemento de SupervivenciaM\u00e1s que agrega una multiherramienta que es un pico, un hacha, una espada, una azada y una pala.",
 
   "item.morethanapickaxe.wooden_adze": "Adze de Madera",
   "item.morethanapickaxe.stone_adze": "Adze de Piedra",
