--- a/src/main/resources/assets/morethanapickaxe/lang/zh_cn.json
+++ b/src/main/resources/assets/morethanapickaxe/lang/zh_cn.json
@@ -1,5 +1,6 @@
 {
   "morethanapickaxe.name": "\u4e0d\u53ea\u662f\u9550",
+  "modmenu.descriptionTranslation.morethanapickaxe": "\u8fd9\u4e2a \u006d\u006f\u0064 \u662f \u751f\u5b58\u52a0 \u7684\u9644\u52a0\u7ec4\u4ef6\uff0c\u5b83\u6dfb\u52a0\u4e86\u4e00\u4e2a\u591a\u529f\u80fd\u5de5\u5177\uff0c\u5373\u9550\u3001\u65a7\u5934\u3001\u5251\u3001\u9504\u5934\u548c\u94f2\u5b50\u3002",
   
   "item.morethanapickaxe.wooden_adze": "\u6728\u963f\u6cfd",
   "item.morethanapickaxe.stone_adze": "\u77f3\u963f\u6cfd",
