--- a/src/main/resources/assets/morethanapickaxe/lang/ja_jp.json
+++ b/src/main/resources/assets/morethanapickaxe/lang/ja_jp.json
@@ -1,5 +1,6 @@
 {
   "morethanapickaxe.name": "\u3064\u308b\u306f\u3057\u4ee5\u4e0a",
+  "modmenu.descriptionTranslation.morethanapickaxe": "\u3053\u306e \u006d\u006f\u0064 \u306f\u3001\u3064\u308b\u306f\u3057\u3001\u65a7\u3001\u5263\u3001\u936c\u3001\u304a\u3088\u3073\u30b7\u30e3\u30d9\u30eb\u3067\u3042\u308b\u30de\u30eb\u30c1\u30c4\u30fc\u30eb\u3092\u8ffd\u52a0\u3059\u308b\u30b5\u30d0\u30a4\u30d0\u30eb\u30d7\u30e9\u30b9\u3078\u306e\u30a2\u30c9\u30aa\u30f3\u3067\u3059\u3002",
   
   "item.morethanapickaxe.wooden_adze": "\u6728\u306e\u30a2\u30ba",
   "item.morethanapickaxe.stone_adze": "\u77f3\u306e\u30a2\u30ba",
